<resources>
    <string name="app_name">婚宴小幫手</string>

    <!-- Account Log In -->
    <string name="error_field_required">該欄位不能空白</string>
    <string name="error_not_foune">帳號或密碼有誤</string>
    <string name="user_name">帳號</string>
    <string name="user_password">密碼</string>
    <string name="user_email">電子信箱</string>
    <string name="have_account">已註冊帳號</string>
    <string name="create_account">註冊帳號</string>
    <string name="login_account">帳號登入</string>
    <string name="login">登入</string>
    <string name="create_login">註冊</string>

    <string name="join_wedding">參加婚宴</string>
    <string name="join_info">婚宴資訊</string>
    <string name="wedding_name">婚宴名稱</string>
    <string name="wedding_password">通關密碼</string>

    <string name="attend_survey">出席意願</string>
    <string name="wedding_info">婚禮資訊</string>
    <string name="wedding_photo">照片紀錄</string>
    <string name="setting">設定</string>
    <string name="attend_wedding">Go!</string>
    <string name="wedding_manage">婚宴管理</string>
    <string name="create_wedding">舉辦婚宴</string>
    <string name="create_manage_wedding">舉辦/管理婚宴</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="real_name">真實姓名</string>
    <string name="survey_name_hint">王小明</string>
    <string name="contact_phone">聯絡電話</string>
    <string name="survey_phone_hint">0910-123-456</string>
    <string name="i_am">我是</string>
    <string name="s_friend">的親友</string>
    <string name="groom">新郎</string>
    <string name="bride">新娘</string>
    <string name="attend">參加</string>
    <string name="not_attend">不克參加</string>
    <string name="survery_address">喜帖寄送地址</string>
    <string name="survey_address_city_hint">(郵遞區號)縣市區域</string>
    <string name="survey_address_detail_hint">詳細地址</string>
    <string name="attend_people_count">婚宴參與人數</string>
    <string name="people">人</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="attend_activity">參與場次</string>
    <string name="engage">訂婚</string>
    <string name="marry">結婚</string>
    <string name="message_for_newly_wed">祝福的話</string>
    <string name="survey_message_hint">新婚愉快！</string>
    <string name="food_preference">飲食習慣</string>
    <string name="meat">葷</string>
    <string name="vegetarian">素</string>
    <string name="attend_no">不克參加</string>
    <string name="survey_save">完成送出</string>
    <string name="time">時間</string>
    <string name="marry_time">結婚時間</string>
    <string name="marry_place">結婚餐廳</string>
    <string name="marry_address">結婚地址</string>
    <string name="marry_string">結婚</string>
    <string name="engage_string">訂婚</string>
    <string name="engage_time">訂婚時間</string>
    <string name="engage_place">訂婚餐廳</string>
    <string name="engage_address">訂婚地址</string>
    <string name="groom_and_bride">新郎＆新娘</string>
    <string name="done">完成送出</string>
    <string name="groom_name">新郎姓名</string>
    <string name="bride_name">新娘姓名</string>
    <string name="marry_website">結婚餐廳網址</string>
    <string name="engage_website">訂婚餐廳網址</string>
    <string name="testing_login">工程模式登入！</string>
    <string name="guest_list">賓客名單</string>
    <string name="edit_wedding_info">編輯婚宴資訊</string>
    <string name="title_activity_guest_list">GuestListActivity</string>
    <string name="guest_detail">賓客詳細資訊</string>
    <string name="friend_of_groom">新郎的親朋好友</string>
    <string name="friend_of_bride">新娘的親朋好友</string>
    <string name="guest_list_summary">賓客統計資料</string>
    <string name="guest_list_detail">賓客清單</string>
    <string name="wedding_form">婚宴形式</string>
    <string name="same_day">訂結同天</string>
    <string name="different_day">訂結分開</string>
    <string name="modify_deadline">填寫出席意願期限</string>
    <string name="wedding_time">婚宴時間</string>
    <string name="wedding_place">婚宴餐廳</string>
    <string name="wedding_address">婚宴地址</string>
    <string name="wedding_website">婚宴餐廳網址</string>
    <string name="wedding">婚宴</string>
    <string name="no_account">未註冊帳號</string>
    <string name="remember_login">記住登入資訊</string>
    <string name="banner_ad_unit_id">ca-app-pub-6991194125878512/7853792150</string>
</resources>
