<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GuestDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/guest_detail_action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:text="@string/real_name"
                android:gravity="center"/>
            <TextView
                android:id="@+id/friend_of_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:text="@string/friend_of_groom"
                android:gravity="center"/>
            <TextView
                android:id="@+id/phone_number_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:text="@string/contact_phone"
                android:gravity="center"/>
            <TextView
                android:id="@+id/attend_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:text="@string/attend_activity"
                android:gravity="center"/>
            <TextView
                android:id="@+id/attend_people_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:text="@string/attend_people_count"
                android:gravity="center"/>
            <TextView
                android:id="@+id/food_preference_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:text="@string/food_preference"
                android:gravity="center"/>
            <TextView
                android:id="@+id/address_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:text="@string/survery_address"
                android:gravity="center"/>
            <TextView
                android:id="@+id/message_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:text="@string/message_for_newly_wed"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
