<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/login_account_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_user_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_login"
            android:id="@+id/remember_login_checkbox"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/login_account_login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="@color/colorButtonBackground"/>

        <Button
            android:id="@+id/testing_login_account_login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/testing_login"
            android:textStyle="bold"
            android:background="@color/colorButtonBackground"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>