<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:stretchColumns="*">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/real_name" />

                        <EditText
                            android:id="@+id/survey_name_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:ems="10"
                            android:hint="@string/survey_name_hint"
                            android:inputType="textPersonName" />
                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/contact_phone" />

                        <EditText
                            android:id="@+id/survey_phone_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:ems="10"
                            android:hint="@string/survey_phone_hint"
                            android:inputType="phone" />
                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/i_am" />

                        <Switch
                            android:id="@+id/groom_bride"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/groom" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/s_friend" />
                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/attend_survey" />

                        <Switch
                            android:id="@+id/survey_attend_switch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/attend" />
                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/survery_address" />

                        <EditText
                            android:id="@+id/survey_address_city_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:ems="10"
                            android:hint="@string/survey_address_city_hint"
                            android:inputType="textPostalAddress" />
                    </TableRow>
                </LinearLayout>

                <EditText
                    android:id="@+id/survey_address_detail_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/survey_address_detail_hint"
                    android:inputType="textPostalAddress" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/attend_people_count" />

                        <TextView
                            android:id="@+id/attend_people_count_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical"
                            android:text="@string/zero" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical"
                            android:text="@string/people" />

                        <Button
                            android:id="@+id/attend_people_minus_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/minus" />

                        <Button
                            android:id="@+id/attend_people_add_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/add" />
                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/attend_activity" />

                        <ToggleButton
                            android:id="@+id/survey_engage_toggle_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/engage" />

                        <ToggleButton
                            android:id="@+id/survey_marry_toggle_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/marry" />
                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_double_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical"
                            android:text="@string/food_preference" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical|center_horizontal"
                                android:text="@string/meat" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical|center_horizontal"
                                android:text="@string/vegetarian" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/meat_count_text"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"
                                android:gravity="center_vertical|center_horizontal"
                                android:text="@string/zero" />

                            <TextView
                                android:id="@+id/vegetable_count_text"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"
                                android:gravity="center_vertical|center_horizontal"
                                android:text="@string/zero" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"
                                android:gravity="center_vertical|center_horizontal"
                                android:text="@string/people" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"
                                android:gravity="center_vertical|center_horizontal"
                                android:text="@string/people" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/meat_minus_button"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"
                                android:text="@string/minus" />

                            <Button
                                android:id="@+id/vegetable_minus_button"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"
                                android:text="@string/minus" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/meat_add_button"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"
                                android:text="@string/add" />

                            <Button
                                android:id="@+id/vegetable_add_button"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"
                                android:text="@string/add" />
                        </LinearLayout>
                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/message_for_newly_wed" />

                        <EditText
                            android:id="@+id/survey_message_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:ems="10"
                            android:hint="@string/survey_message_hint"
                            android:inputType="textLongMessage" />
                    </TableRow>
                </LinearLayout>
            </TableLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>